remove sdk generation feature
