# src/routes/devportalRoute.js
@@ -24,7 +24,6 @@ const devportalService = require('../services/devportalService');
 const apiMetadataService = require('../services/apiMetadataService');
 const adminService = require('../services/adminService');
 const devportalController = require('../controllers/devportalController');
-const sdkJobService = require('../services/sdkJobService');
 const billingController = require("../controllers/billingController");
 const usageController = require("../controllers/usageController");
 const invoiceController = require("../controllers/invoiceController");
@@ -203,12 +202,6 @@ router.post('/applications/:applicationId/oauth-keys/:keyMappingId/clean-up', en
 router.post('/api-keys/generate', enforceSecuirty(constants.SCOPES.DEVELOPER), devportalController.generateAPIKeys);
 router.post('/api-keys/:apiKeyID/revoke', enforceSecuirty(constants.SCOPES.DEVELOPER), devportalController.revokeAPIKeys);
 router.post('/api-keys/:apiKeyID/regenerate', enforceSecuirty(constants.SCOPES.DEVELOPER), devportalController.regenerateAPIKeys);
-
-// SDK Generation Routes
-router.post('/applications/:applicationId/generate-sdk', enforceSecuirty(constants.SCOPES.DEVELOPER), sdkJobService.generateSDK);
-router.get('/applications/:applicationId/sdk/job-progress/:jobId', enforceSecuirty(constants.SCOPES.DEVELOPER),sdkJobService.streamSDKProgress);
-router.post('/applications/:applicationId/sdk/cancel/:jobId', enforceSecuirty(constants.SCOPES.DEVELOPER), sdkJobService.cancelSDK);
-router.get('/sdk/download/:filename', enforceSecuirty(constants.SCOPES.DEVELOPER),sdkJobService.downloadSDK);
 
 // Billing / Stripe
 router.get("/organizations/:orgId/billing/usage-data", ensureBillingAuth, billingController.getUsageData);
